# traffic-oracle-oe

./: .dockerignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Meta Hackathon Problem Statement.docx  Meta OpenEnv Hackathon_ Guidelines.docx  README.md  RUNNING.md  client.py  graders.py  inference.py  openenv.yaml  pyproject.toml  simulation.py  tasks.py  test_env.py  vehicles.py
.claude/: settings.local.json
baseline/: fixed_time_agent.py  run_baseline.py
redgrid/: README.md  __init__.py  client.py  graders.py  inference.py  models.py  network.py  openenv.yaml  pyproject.toml  simulation.py  tasks.py
redgrid/baseline/: __init__.py  fixed_time_agent.py  run_baseline.py
redgrid/redgrid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
redgrid/server/: Dockerfile  __init__.py  app.py  traffic_environment.py
redgrid/tests/: test_environment.py  test_network.py  test_simulation.py  test_vehicles.py
server/: app.py  traffic_environment.py
tests/: test_environment.py  test_network.py  test_simulation.py  test_vehicles.py
